css/styles.css
/* -- ROOT -- */
:root {
  --white-bg-color: #ffff;
  --light-bg-color: #f4f4fd;
  --first-text-color: #434455;
  --second-text-color: #8e8f99;
  --primary-brand-color: #4d5ae5;
  --accent-color: #e7e9fc;
  --dark-shadows-color: #2e2f42;
  --customers-logo-color: #8e8f99;
  --success-color: #31d0aa;
  --hover-color: #404bbf;

  --transition-timing: 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* -- BODY -- */
body {
  font-family: "Roboto", sans-serif;
  font-size: 16px;

  color: var(--first-text-color);
  background-color: var(--white-bg-color);
}

/* -- COMMON PARAMETERS -- */

.container {
  min-width: 320px;
  margin: 0 auto;
  padding: 0 16px;
}

/* mobile screen */
@media screen and (min-width: 428px) {
  .container {
    width: 428px;
  }
}

/* tablet screen */
@media screen and (min-width: 768px) {
  .container {
    width: 768px;
  }
}

/* desktop screen */
@media screen and (min-width: 1200px) {
  .container {
    width: 1158px;
    padding: 0 15px;
  }
}

.section {
  padding-top: 96px;
  padding-bottom: 96px;
}

@media screen and (min-width: 1200px) {
  .section {
    padding-top: 120px;
    padding-bottom: 120px;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul {
  margin: 0;
  padding: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.list {
  list-style: none;
}

.link {
  text-decoration: none;
}

.visually-hidden,
.checkbox-input {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;

  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* -- HEADER -- */

.page-header {
  border: 1px solid #e7e9fc;
  padding-top: 24px;
  padding-bottom: 24px;
}

@media screen and (min-width: 768px) {
  .page-header {
    padding: 0;
  }
}

.main-header {
  position: relative;
}

@media screen and (min-width: 768px) {
  .main-header,
  .site-nav {
    display: flex;
    align-items: center;
  }
}

.logo {
  font-family: "Raleway";
  font-style: normal;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.33;
  letter-spacing: 0.03em;

  color: var(--first-text-color);
}

.logo-web {
  color: var(--primary-brand-color);
}

.open-btn {
  position: absolute;
  right: 16px;

  padding: 0;

  background-color: transparent;
  border: none;
  cursor: pointer;
}

@media (min-width: 768px) {
  .open-btn {
    display: none;
  }
}

.menu-icon {
  display: block;
  width: 32px;
  height: 22px;

  stroke: var(--dark-shadows-color);
}

.nav-list {
  display: flex;
  margin-left: 120px;
}

@media screen and (max-width: 767px) {
  .nav-list {
    display: none;
  }
}

@media screen and (min-width: 1200px) {
  .nav-list {
    margin-left: 76px;
  }
}

.nav-list .item:not(:last-child) {
  margin-right: 40px;
}

.nav-link {
  transition: color var(--transition-timing);
}

.nav-link:hover,
.nav-link:focus,
.nav-link:active {
  color: var(--primary-brand-color);
}

.nav-link {
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;

  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;

  color: var(--dark-shadows-color);
}

.nav-link.current {
  position: relative;

  color: var(--primary-brand-color);
}

.nav-link.current::after {
  content: " ";

  position: absolute;
  bottom: -1px;

  display: block;
  width: 100%;
  height: 4px;

  background-color: var(--hover-color);
  border-radius: 2px;
}

.contacts-list {
  display: flex;
  flex-direction: column;
  margin-left: auto;
}

@media screen and (max-width: 767px) {
  .contacts-list {
    display: none;
  }
}

@media screen and (min-width: 1200px) {
  .contacts-list .item + .item {
    margin-left: 40px;
  }
}

@media screen and (min-width: 1200px) {
  .contacts-list {
    flex-direction: row;
  }
}

.contacts-link {
  font-size: 12px;
  line-height: 1.33;
  letter-spacing: 0.04em;

  color: var(--first-text-color);

  transition: color var(--transition-timing);
}

@media screen and (min-width: 1200px) {
  .contacts-link {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
  }
}

.contacts-link:hover,
.contacts-link:focus {
  color: var(--primary-brand-color);
}

/* -- HERO -- */

.hero {
  max-width: 1440px;
  height: 432px;
  margin: 0 auto;
  padding-top: 112px;
  padding-bottom: 112px;

  background-color: var(--dark-shadows-color);
  background-image: linear-gradient(
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url("../images/mobile/hero-bg-mobile-428.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .hero {
    height: 436px;
    padding-bottom: 108px;
  }
}

@media screen and (min-width: 1200px) {
  .hero {
    height: 600px;
    padding-top: 188px;
    padding-bottom: 188px;
  }
}

@media screen and (min-device-pixel-ratio: 2),
  (-webkit-min-device-pixel-ratio: 2),
  (min-resolution: 192dpi),
  (min-resolution: 2dppx) {
  .hero {
    background-image: linear-gradient(
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url(../images/mobile/hero-bg-mobile-856.jpg);
  }
}

@media screen and (min-width: 429px) {
  .hero {
    background-image: linear-gradient(
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url(../images/tablet/hero-bg-tablet-768.jpg);
  }
}

@media screen and (min-width: 429px) and (min-device-pixel-ratio: 2),
  screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
  screen and (min-width: 768px) and (min-resolution: 192dpi),
  screen and (min-width: 768px) and (min-resolution: 2dppx) {
  .hero {
    background-image: linear-gradient(
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url(../images/tablet/hero-bg-tablet-1536.jpg);
  }
}

@media screen and (min-width: 769px) {
  .hero {
    background-image: linear-gradient(
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url(../images/desktop/hero-bg-desktop-1440.jpg);
  }
}
/* ... */

